[package]
name = "void-break-reborn"
version = "0.1.0"
authors = ["Noah Emke"]
edition = "2021"
repository = "https://github.com/MTFT-Games/void-break-reborn"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small but of optimization in debug
[profile.dev]
opt-level = 1

# Enable high optimization for dependancies like Bevy
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0" }

# Alias for Bevy's dynamic_linking
[features]
fast-compile = ["bevy/dynamic_linking"]